Adding API Docs on Profit Student Module
